Udemy/Section7_Services-Networking/add_food.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2022-04-16T10:19:50Z"
  generation: 1
  name: ingress-wear-watch
  namespace: app-space
  resourceVersion: "1694"
  uid: 6fabfe69-e540-4156-801f-65738b047ea4
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: wear-service
            port:
              number: 8080
        path: /wear
        pathType: Prefix
      - backend:
          service:
            name: video-service
            port:
              number: 8080
        path: /stream    #/watch
        pathType: Prefix
      - backend: 
          service : 
            name : food-service
            port : 
              number : 8080
          path : /eat
status:
  loadBalancer:
    ingress:
    - ip: 10.106.191.82
